--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="0; url=https://www.target-url.com" />
-    <link rel="canonical" href="https://www.target-url.com" />
+    <meta http-equiv="refresh"
+        content="0; url=https://sophon-file.sophon.cn/sophon-prod-s3/drive/24/08/01/11/SOPHON_and_SDK_FAQ_zh.pdf" />
+    <link rel="canonical"
+        href="https://sophon-file.sophon.cn/sophon-prod-s3/drive/24/08/01/11/SOPHON_and_SDK_FAQ_zh.pdf" />
 </head>
 
 <body>
-    <p>If you are not redirected, <a href="https://www.target-url.com">click here</a>.</p>
+    <p>If you are not redirected, <a
+            href="https://sophon-file.sophon.cn/sophon-prod-s3/drive/24/08/01/11/SOPHON_and_SDK_FAQ_zh.pdf">click
+            here</a>.</p>
 </body>
 
 </html>
